코드 수정 및 각종 기능 추가

--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,11 @@
   
   .text-secondary {
     color: #eece1a; }
+
+ .text-third {
+  color: #ff00ff;
+  font-size: 16px;
+  text-align: center; }
   
   main {
     padding: 4rem;
